k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-server
  template:
    metadata:
      labels:
        app: app-server
    spec:
      # Ожидаем готовности БД и очередей перед стартом приложения
      containers:
      - name: api-server
        image: gophprofile-app:12.0.1
        imagePullPolicy: IfNotPresent
        command: ["./gophprofile"]
        ports:
        - containerPort: 8080
        resources:
          requests: { memory: "128Mi", cpu: "50m" }
          limits: { memory: "256Mi", cpu: "200m" }
---
apiVersion: v1
kind: Service
metadata:
  name: app-server
spec:
  selector:
    app: app-server
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: gophprofile-app:12.0.1
        imagePullPolicy: IfNotPresent
        command: ["./worker"]
        resources:
          requests: { memory: "128Mi", cpu: "50m" }
          limits: { memory: "256Mi", cpu: "200m" }
